--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,2 +1,17 @@
-<h1>Books#edit</h1>
-<p>Find me in app/views/books/edit.html.erb</p>
+<h1>Editing Book</h1>
+
+<%= form_for(@book, url: "/books/#{@book.id}") do |f| %>
+
+	<h4>Title</h4>
+	<%= f.text_field :title %>
+
+	<h4>Body</h4>
+	<%= f.text_area :body %>
+
+	<div>
+		<%= f.submit 'Update Book' %>
+	</div>
+
+<% end %>
+
+<P><%= link_to "Show", book_path(@book) %> | <%= link_to "Back", books_path %></P>
