--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,29 @@
-<h1>New Book</h1>
+<h1>Books</h1>
 
+<table>
+	<thead>
+		<tr>
+			<th>Title</th>
+			<th>Body</th>
+			<th></th>
+			<th></th>
+			<th></th>
+		</tr>
+	</thead>
+	<tbody>
+		<% @books.each do |book| %>
+		<tr>
+			<td><%= book.title %></td>
+			<td><%= book.body %></td>
+			<td><%= link_to 'Show', book_path(book) %></td>
+			<td><%= link_to 'Edit', edit_book_path(book) %></td>
+			<td><%= link_to 'Destroy', destroy_book_path(book), method: :delete, "data-confirm" => "Are you sure?" %></td>
+		</tr>
+		<% end %>
+	</tbody>
+</table>
+
+<h1>New Book</h1>
 <%= form_for(@book, url: '/books') do |f| %>
 
 	<h4>Title</h4>
