--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,5 +1,17 @@
 <h1>Editing Book</h1>
 
+<% if @book.errors.any? %>
+	<div class="error_explanatation">
+		<h4><%= @book.errors.count %> errors prohibited this book from being saved:</h4>
+
+		<ul>
+		<% @book.errors.full_messages.each do |msg| %>
+			<li><%= msg %></li>
+		<% end %>
+		</ul>
+	</div>
+<% end %>
+
 <%= form_for(@book, url: "/books/#{@book.id}") do |f| %>
 
 	<h4>Title</h4>
