--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -24,6 +24,17 @@
 </table>
 
 <h1>New Book</h1>
+<% if @book.errors.any? %>
+	<div class="error_explanatation">
+		<h4><%= @book.errors.count %> errors prohibited this book from being saved:</h4>
+
+		<ul>
+		<% @book.errors.full_messages.each do |msg| %>
+			<li><%= msg %></li>
+		<% end %>
+		</ul>
+	</div>
+<% end %>
 <%= form_for(@book, url: '/books') do |f| %>
 
 	<h4>Title</h4>
