--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -2,4 +2,4 @@
 <p>Bookers では、さまざまな書籍に関するあなたの意見や</p>
 <p>印象を共有し交換することができます</p>
 
-<a href="google.co.jp">start</a>
+<%= link_to "start", books_path %>
